@@ -1,6 +1,8 @@
 
 -- New option for printing MCMC samplers of particular type(s): conf$printSamplers(type = "conjugate"), for example.
 
+-- Burnin is now handled natively by mcmc$run method (rather than as a post-processing step in runMCMC).
+
                             CHANGES IN VERSION 0.6-11 (June 2018)
 
 USER LEVEL CHANGES
